// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthereumSig should create propose envelope 1`] = `
{
  "data": {
    "authenticator": "0x86bfa0726cba0febeee457f04b705ab74b54d01c",
    "executionParams": "0x00",
    "executor": {
      "address": "0xb1001fdf62c020761039a750b27e73c512fdaa5e",
      "index": 0,
    },
    "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
    "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
    "strategies": [
      {
        "address": "0x395ed61716b48dc904140b515e9f682e33330154",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 31337,
      "name": "snapshot-x",
      "verifyingContract": "0x86bfa0726cba0febeee457f04b705ab74b54d01c",
      "version": "1",
    },
    "message": {
      "author": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
      "executionStrategy": {
        "index": 0,
        "params": "0x00",
      },
      "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
      "salt": 0,
      "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
      "userVotingStrategies": [
        {
          "index": 0,
          "params": "0x00",
        },
      ],
    },
    "signature": "0xb9c4ad4779ec21a4649e9749e0bdff53bd89f89dec4d2c7c2d78431b2324975227b2da2deaff144f2f96907fd088d5bec1603a4658c51bc9d01ceae3f8433f901c",
    "types": {
      "IndexedStrategy": [
        {
          "name": "index",
          "type": "uint8",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
      "Propose": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "author",
          "type": "address",
        },
        {
          "name": "metadataUri",
          "type": "string",
        },
        {
          "name": "executionStrategy",
          "type": "IndexedStrategy",
        },
        {
          "name": "userVotingStrategies",
          "type": "IndexedStrategy[]",
        },
        {
          "name": "salt",
          "type": "uint256",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig should create vote envelope 1`] = `
{
  "data": {
    "authenticator": "0x86bfa0726cba0febeee457f04b705ab74b54d01c",
    "choice": 1,
    "proposal": 3,
    "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
    "strategies": [
      {
        "address": "0x395ed61716b48dc904140b515e9f682e33330154",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 31337,
      "name": "snapshot-x",
      "verifyingContract": "0x86bfa0726cba0febeee457f04b705ab74b54d01c",
      "version": "1",
    },
    "message": {
      "choice": 1,
      "proposalId": 3,
      "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
      "userVotingStrategies": [
        {
          "index": 0,
          "params": "0x00",
        },
      ],
      "voter": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    },
    "signature": "0x010130cfb76fddd19253283976d72849b9e21a7a48ee00de9f714bda5ab80d82755bc2a5352f23a6613ca0f1ad683879585877acdad9189df1afada6157e2c331b",
    "types": {
      "IndexedStrategy": [
        {
          "name": "index",
          "type": "uint8",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
      "Vote": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "voter",
          "type": "address",
        },
        {
          "name": "proposalId",
          "type": "uint256",
        },
        {
          "name": "choice",
          "type": "uint8",
        },
        {
          "name": "userVotingStrategies",
          "type": "IndexedStrategy[]",
        },
      ],
    },
  },
}
`;
